--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Class::Trait version 0.04
+Class::Trait version 0.05
 =====================
 
 INSTALLATION
@@ -16,7 +16,7 @@ This module requires no other modules and libraries outside of the core modules
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2004 Infinity Interactive, Inc.
+Copyright (C) 2004, 2005 Infinity Interactive, Inc.
 
 http://www.iinteractive.com
 
