Import of OVID/Class-Trait-0.20 from CPAN.
gitpan-cpan-distribution: Class-Trait
gitpan-cpan-version:      0.20
gitpan-cpan-path:         OVID/Class-Trait-0.20.tar.gz
gitpan-cpan-author:       OVID
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl extension Class::Trait.
 
+0.20 Nov. 26, 2005
+    - Added ability to apply traits at runtime to instances and classes
+    - Changed 'die' to 'croak'
+    - Renumbered tests.
+    - Made most private subs in Class::Trait begin with an underscore.
+    - Eliminated subtle bug where reusing a trait with excluded methods could
+      fail.  It doubtful anyone would ever encounter this, but still ...
+
 0.11 Nov. 19, 2005
     - Added tests to ensure that failure messages were correct.
     - Fixed bug where not all conflicting methods were being recognized.
