--- a/README
+++ b/README
@@ -1,14 +1,14 @@
-Class::Trait version 0.05
+Class::Trait 
 =====================
 
 INSTALLATION
 
 To install this module type the following:
 
-   perl Makefile.PL
-   make
-   make test
-   make install
+   perl Build.PL
+   ./Build
+   ./Build test
+   ./Build install
 
 DEPENDENCIES
 
