Import of OVID/Class-Trait-0.22 from CPAN.
gitpan-cpan-distribution: Class-Trait
gitpan-cpan-version:      0.22
gitpan-cpan-path:         OVID/Class-Trait-0.22.tar.gz
gitpan-cpan-author:       OVID
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,12 +1,12 @@
 Revision history for Perl extension Class::Trait.
 
-0.21 Sep. 12, 2006
-    - Converted Class::Trait::Config methods to be normal getter/setters, not
-      lvalue methods.  lvalue methods prevent the code from being profiled
-      via Devel::DProf.  Bug reported by Roman Daniel.  He also rewrote it to
-      fix the problem.
-    - Fixed bug where classes would report false for $class->does($class).
-      Reported by chromatic.
+0.22 Oct 25, 2006
+    - Fixed bug where does() failed when inherited.  Reported by Romano
+      Daniel.
+    - Cleaned up the MANIFEST
+
+0.21 Feb. 15, 2006
+    - Suppressed "void" warnings for mod_perl in the INIT phase.
 
 0.20 Nov. 26, 2005
     - Added ability to apply traits at runtime to instances and classes
