Import of OVID/Class-Trait-0.3 from CPAN.
gitpan-cpan-distribution: Class-Trait
gitpan-cpan-version:      0.3
gitpan-cpan-path:         OVID/Class-Trait-0.3.tar.gz
gitpan-cpan-author:       OVID
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Class::Trait.
 
+0.30 Oct 18, 2009
+    - Added deprecation notice.  No new features or bug fixes are intended.
+
 0.22 Oct 25, 2006
     - Fixed bug where does() failed when inherited.  Reported by Romano
       Daniel.
